<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_refresh_layout"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/background_MainActivity"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/background_image"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/background" />

    <TextView
        android:id="@+id/india"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/border"
        android:fontFamily="sans-serif-light"
        android:padding="8dp"
        android:text="@string/India"
        android:textAlignment="center"
        android:textColor="@android:color/primary_text_light"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/recoveredCases"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="INDIA" />

    <TextView
        android:id="@+id/activeCases"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/border_sky_blue"
        android:fontFamily="sans-serif-condensed-light"
        android:padding="8dp"
        android:text="@string/activeCasesText"
        android:textAlignment="textStart"
        android:textColor="@android:color/primary_text_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/deaths"
        app:layout_constraintTop_toTopOf="@+id/deaths"
        tools:text="Active\n\n1,12,236" />

    <TextView
        android:id="@+id/recoveredCases"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/border_light_green"
        android:fontFamily="sans-serif-condensed-light"
        android:padding="8dp"
        android:text="@string/recoveredCasesText"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/newDeaths"
        app:layout_constraintEnd_toStartOf="@id/deaths"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Recovered\n\n1,24,345" />

    <TextView
        android:id="@+id/deaths"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border_red"
        android:fontFamily="sans-serif-condensed-light"
        android:padding="8dp"
        android:text="@string/deathsText"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/recoveredCases"
        tools:text="Deaths\n\n7,207" />

    <TextView
        android:id="@+id/header_affected"
        android:layout_width="181dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/border_orange"
        android:fontFamily="sans-serif-condensed-light"
        android:padding="8dp"
        android:text="@string/affectedText"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/indianflag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/indianflag"
        tools:text="Affected\n\n2,44,317" />

    <TextView
        android:id="@+id/newCases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border_light_purple"
        android:fontFamily="sans-serif-condensed-light"
        android:padding="8dp"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/new_cases_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="New Cases\n\n4,567" />

    <TextView
        android:id="@+id/newDeaths"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/border_dark_orange"
        android:fontFamily="sans-serif-condensed-light"
        android:padding="8dp"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/new_deaths_text"
        app:layout_constraintEnd_toStartOf="@+id/newCases"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/newCases"
        tools:text="New Deaths\n\n267" />

    <TextView
        android:id="@+id/critical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/border_green_yellow"
        android:fontFamily="sans-serif-condensed-light"
        android:padding="8dp"
        android:text="@string/critical_cases_text"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/newCases"
        app:layout_constraintTop_toTopOf="@+id/newCases"
        tools:text="@string/critical_cases_text" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/stateCardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="#FFFFFF"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:cardCornerRadius="16dp"
        app:cardElevation="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newDeaths">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/icon"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/corona_photo" />

            <TextView
                android:id="@+id/caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-light"
                android:padding="4dp"
                android:text="@string/state_wise_cases"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold">

            </TextView>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/countryCardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="#FFFFFF"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:cardCornerRadius="16dp"
        app:cardElevation="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/divider"
        app:layout_constraintTop_toTopOf="@+id/stateCardView">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/icon"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/crying_earth" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-light"
                android:padding="4dp"
                android:text="@string/country_wise_cases"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold">

            </TextView>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <View
        android:id="@+id/divider"
        android:layout_width="1dp"
        android:layout_height="16dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/indianflag"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/icon"
        app:layout_constraintStart_toEndOf="@+id/india"
        app:layout_constraintTop_toTopOf="@+id/india"
        app:srcCompat="@drawable/india_flag" />



</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>